--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "> threejs 자주쓰는 기능 함수로 정의",
   "main": "three.js",
   "scripts": {
+    "start": "webpack-dev-server",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,10 +19,22 @@
   },
   "homepage": "https://github.com/taeksoolee/vue_threejs#readme",
   "dependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@webpack-cli/init": "^1.0.3",
+    "babel-loader": "^8.2.2",
     "three": "^0.123.0",
     "three-fbx-loader": "^1.0.3",
     "three-orbitcontrols": "^2.110.3",
     "vue": "^2.6.12",
     "vuex": "^3.6.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/polyfill": "^7.12.1",
+    "html-webpack-plugin": "^4.5.0",
+    "webpack": "^4.32.0",
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
